--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "eslint": "7.14.0",
     "jest": "26.6.3",
     "metro-react-native-babel-preset": "0.64.0",
+    "react-native-svg-app-icon": "^0.4.0",
     "react-test-renderer": "17.0.1"
   },
   "jest": {
