--- a/ios/Podfile
+++ b/ios/Podfile
@@ -15,6 +15,8 @@ target 'clothes_detector_mobile' do
   pod 'RNImageCropPicker', :path => '../node_modules/react-native-image-crop-picker'
 
 
+  pod 'react-native-config', :path => '../node_modules/react-native-config'
+
   target 'clothes_detector_mobileTests' do
     inherit! :complete
     # Pods for testing
