--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "react": "17.0.1",
     "react-native": "0.64.2",
+    "react-native-config": "^1.4.2",
     "react-native-elements": "^3.4.2",
     "react-native-image-crop-picker": "^0.36.2",
     "react-native-vector-icons": "^8.1.0"
