--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "react-native-config": "^1.4.2",
     "react-native-elements": "^3.4.2",
     "react-native-image-crop-picker": "^0.36.2",
+    "react-native-safe-area-context": "^3.2.0",
+    "react-native-safe-area-view": "^1.1.1",
     "react-native-vector-icons": "^8.1.0"
   },
   "devDependencies": {
