Squashed commit of the following:
commit be0119182b756e42e6fa4c8ad88ec3f6f7990d17
Author: Paweł Bęza <pawel.beza99@gmail.com>
Date:   Sun Sep 5 16:36:29 2021 +0200

    Add reverse image search

commit 743f80b1026d7a7c4178a8cfd0553c52d8d6b2fe
Author: Paweł Bęza <pawel.beza99@gmail.com>
Date:   Sun Aug 1 19:52:01 2021 +0200

    add bottom panel component

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -19,6 +19,10 @@ target 'clothes_detector_mobile' do
 
   pod 'react-native-safe-area-context', :path => '../node_modules/react-native-safe-area-context'
 
+  pod 'RNFS', :path => '../node_modules/react-native-fs'
+
+  pod 'RNFBStorage', :path => '../node_modules/@react-native-firebase/storage'
+
   target 'clothes_detector_mobileTests' do
     inherit! :complete
     # Pods for testing
