--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-native-firebase/storage": "^12.7.5",
     "@react-native-seoul/masonry-list": "^1.0.6",
     "expo-image-manipulator": "^9.2.2",
+    "lottie-react-native": "^4.1.3",
     "react": "17.0.1",
     "react-native": "0.64.2",
     "react-native-config": "^1.4.2",
