--- a/ios/clothes_detector_mobile/Info.plist
+++ b/ios/clothes_detector_mobile/Info.plist
@@ -69,6 +69,8 @@
 		<string>Octicons.ttf</string>
 		<string>SimpleLineIcons.ttf</string>
 		<string>Zocial.ttf</string>
+		<string>freestyle_script.TTF</string>
+		<string>FreestyleScript.ttf</string>
 	</array>
 </dict>
 </plist>
