--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@react-native-firebase/app": "^12.7.5",
     "@react-native-firebase/storage": "^12.7.5",
     "@react-native-seoul/masonry-list": "^1.0.6",
+    "@react-navigation/native-stack": "^6.2.2",
+    "@react-navigation/stack": "^6.0.9",
     "expo-image-manipulator": "^9.2.2",
     "lottie-react-native": "^4.1.3",
     "react": "17.0.1",
@@ -21,19 +23,23 @@
     "react-native-config": "^1.4.2",
     "react-native-elements": "^3.4.2",
     "react-native-fs": "^2.18.0",
+    "react-native-gesture-handler": "^1.10.3",
     "react-native-image-crop-picker": "^0.36.2",
     "react-native-photo-manipulator": "^1.2.4",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-safe-area-view": "^1.1.1",
+    "react-native-screens": "^3.8.0",
     "react-native-unimodules": "^0.14.6",
     "react-native-uuid": "^2.0.1",
     "react-native-vector-icons": "^8.1.0",
+    "react-navigation": "^4.4.4",
     "rn-swipeable-panel": "^1.2.5"
   },
   "devDependencies": {
     "@babel/core": "7.14.6",
     "@babel/runtime": "7.14.6",
     "@react-native-community/eslint-config": "2.0.0",
+    "@react-navigation/native": "^6.0.4",
     "babel-jest": "26.6.3",
     "eslint": "7.14.0",
     "jest": "26.6.3",
