Add real time object detection

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -183,6 +183,10 @@ android {
 
         }
     }
+
+    packagingOptions {
+        pickFirst '**/*.so'
+    }
 }
 
 dependencies {
@@ -212,6 +216,9 @@ dependencies {
     } else {
         implementation jscFlavor
     }
+
+    implementation 'org.tensorflow:tensorflow-lite:2.4.0'
+    implementation 'org.tensorflow:tensorflow-lite-gpu:2.4.0'
 }
 
 // Run this once to be able to run the application with BUCK
