--- a/android/build.gradle
+++ b/android/build.gradle
@@ -32,6 +32,10 @@ allprojects {
             url("$rootDir/../node_modules/jsc-android/dist")
         }
 
+        maven {
+          url("https://oss.sonatype.org/content/repositories/snapshots")
+        }
+
         google()
         jcenter()
         maven { url 'https://www.jitpack.io' }
