--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/stack": "^6.0.9",
     "expo-image-manipulator": "^9.2.2",
     "lottie-react-native": "^4.1.3",
+    "patch-package": "^6.4.7",
     "react": "17.0.1",
     "react-native": "0.64.2",
     "react-native-config": "^1.4.2",
@@ -26,6 +27,7 @@
     "react-native-gesture-handler": "^1.10.3",
     "react-native-image-crop-picker": "^0.36.2",
     "react-native-photo-manipulator": "^1.2.4",
+    "react-native-pytorch-core": "^0.1.2",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-safe-area-view": "^1.1.1",
     "react-native-screens": "^3.8.0",
@@ -43,6 +45,7 @@
     "babel-jest": "26.6.3",
     "eslint": "7.14.0",
     "jest": "26.6.3",
+    "metro-config": "^0.66.2",
     "metro-react-native-babel-preset": "0.64.0",
     "react-native-svg-app-icon": "^0.4.0",
     "react-test-renderer": "17.0.1",
